--- a/realestate.rmd
+++ b/realestate.rmd
@@ -23,56 +23,8 @@ output:
 ---
 
 ```{r}
-
-library(ggplot2)
-library(plyr)
-library(faraway)
-library(car)
-library(gridExtra) 
-library(MASS)
-library(data.table)
-library(GGally)
-
-setwd("C:/Users/ottohr/Desktop/HÍ/Master/Hagnýt línuleg tölfræðilíkön/Skilaverkefni 5")
-verdmat <-read.table("gagnasafn_endurmat2017_litid.csv", sep=',', header=T)
-RE_data <- data.frame(verdmat)
-dt.re <- data.table(verdmat)
-#Matsv:
-#  Vesturb. 11
-#  miðbær s þ 31
-#  hlíðar 80
-#  grafarvogur 120
-#  seljahverfi 150
-
-dt.verdmat <- data.table(verdmat)
-dt.RE_data <- dt.verdmat[matssvaedi %in% c(11,31,80,120,150)]
-dt.RE_data <- dt.RE_data[,k.ar:=substring(kdagur,1,4)]
-
-
-```
- 
-Byrjum á að taka út þær breytur sem við teljum ekki  
- 
-```{r}
-
-
-dt.RE_data <- subset(dt.RE_data, select=c("kdagur","nuvirdi","teg_eign","byggar","haednr","lyfta","ibm2","fjhaed",
-                                      "fjbilast","fjbkar","fjsturt","fjklos","fjeld","fjherb",
-                                      "fjstof","fjgeym","stig10","ibteg"))
-
-dt.RE_data <- dt.RE_data[,kdagur:=as.Date(kdagur)]
-
-#breyta lyftu í boolean og breyta ibteg í factor, 11=serbýli, 12=fjölbýli
-
-#for(i in 1:n){
-#  if(dt.RE_data$lyfta[i]!=0){dt.RE_data$lyfta[i]=1}
-#  else{}
-#}
-
-for(i in 1:nrow(dt.RE_data)){
-  if(dt.RE_data$ibteg[i]==11){dt.RE_data$ibteg="Sérbýli"}
-  else{dt.RE_data$ibteg[i]="Fjölbýli"}
-}
+# Bara að gera setup ef það þarf
+if(!exists("dt.RE_data")){ source("setUp.R")}
 
 #ggpairs(dt.RE_data)
 
@@ -81,7 +33,7 @@ slm1 <- step(lm1)
 summary(slm1)
 slm1$anova
 
-
+help(step)
 n<-dim(dt.RE_data)[1]
 
 set.seed(5)
