B;tti við QQplot fyrir res er í outliers.R

--- a/realestate.rmd
+++ b/realestate.rmd
@@ -175,3 +175,12 @@ summary(lm.prufa)
 diag.prufa <- fortify(lm.prufa)
 ```
 
+```{r}
+################################################# PLOTS
+indexPlotResiduals(lm.all)
+QQplotResiduals(lm.all)
+QQplotResiduals(lm.allYTransformed)
+QQplotResiduals(lm.stepYtransformed)
+```
+
+
