--- a/fame.rmd
+++ b/fame.rmd
@@ -22,6 +22,17 @@ output:
     toc_depth: '2' 
 ---
 
+```{r echo=FALSE}
+# Bara að gera setup ef það þarf
+if(!exists("dt.RE_data")){ source("setUp.R")}
+source("utilz.R")
+source("outliers.R")
+source("testArni.R")
+
+lm.all <- lm(nuvirdi ~ .,data=train)
+
+```
+
 
 ```{r child='diagnostics.rmd'}
 
