--- a/transformation.rmd
+++ b/transformation.rmd
@@ -1,9 +1,72 @@
 # Transformation
 
+We know that nuvirdi has an unusually heavy tale so we'll start by transforming our response variable using boxcox.
+
+```{r, fig.cap="Boxcox plot for the model and the model without outliers. No outlier plot is on the right", warning=FALSE}
+par(mfrow=c(1,2))
+lm.noOutlier <- lm(nuvirdi ~ ibm2, data=train)
+boxcox(lm.all)
+boxcox(lm.noOutlier)
+par(mfrow=c(1,1))
+```
+
 ```{r}
+trainNO <- train
+bcAll <- boxcox(lm.all, plotit = FALSE)
+bcNO <- boxcox(lm.noOutlier, plotit = FALSE)
+# Get the highest value from the boxcox plots
+lambdaAll <- with(bcAll, x[which.max(y)])
+lambdaNO <- with(bcNO, x[which.max(y)])
+# Transform the train and test datasets
+trainBCAll <- bcTransF(train, lambdaAll)
+testBCAll <- bcTransF(test, lambdaAll)
+trainBCNO <- bcTransF(trainNO, lambdaNO)
+testBCNO <- bcTransF(test, lambdaNO)
 
-
+lm.allBc <- lm(nuvirdi ~ ., data = trainBCAll)
+lm.noOutlierBc <- lm(nuvirdi ~ ibm2, data = trainBCNO)
+Radj.allBc <- CalculateRadjLambda(lm.allBc, testBCAll, lambdaAll) # 0.8488961 rétt: 0.7643883
+Radj.allNOBc <- CalculateRadjLambda(lm.noOutlierBc, testBCNO, lambdaNO)
 
 ```
 
+Here we get $R_{adj. full model}=`r Radj.allBc`$ and $R_{adj. NoOutliers}=`r Radj.allNOBc`$ by using the Boxcox method on the response variable. We can see from our ggpairs plot that the explanatory variable $ibm2$ has a heavy tale so lets try to transform that variable as well. Here we use a log transformation for the $ibm2$ variable.
+
+```{r}
+
+# Transform ibm2
+trainBCAllIBM2 <- trainBCAll
+trainBCAllIBM2$ibm2 <- log(trainBCAll$ibm2)
+testBCAllIBM2 <- testBCAll
+testBCAllIBM2$ibm2 <- log(testBCAll$ibm2)
+trainBCNOIBM2 <- trainBCNO
+trainBCNOIBM2$ibm2 <- log(trainBCNO$ibm2)
+testBCNOIBM2 <- testBCNO
+testBCNOIBM2$ibm2 <- log(testBCNO$ibm2)
+
+lm.allBcIBM2 <- lm(nuvirdi ~ ., data = trainBCAllIBM2)
+lm.allNOBcIBM2 <- lm(nuvirdi ~ ibm2*matssvaedi+undirmatssvaedi+ibteg+teg_eign+fjeld+k.ar, data = trainBCNOIBM2)
+Radj.allBcIBM2 <- CalculateRadjLambda(lm.allBcIBM2, testBCAllIBM2, lambdaAll) # 0.8880478 rétt: 0.8342736
+Radj.allNOBcIBM2 <- CalculateRadjLambda(lm.allNOBcIBM2, testBCNOIBM2, lambdaNO) # 0.8880478 rétt: 0.8342736
+Radj.allNOBcIBM2
+
+
+lm.allNOBcIBM2 <- lm(nuvirdi ~ ibm2*matssvaedi+undirmatssvaedi+ibteg+teg_eign+fjeld+as.factor(k.ar), data = trainBCNOIBM2)
+
+lm.allNOBcIBM2 <- lm(nuvirdi ~ ibm2*matssvaedi+undirmatssvaedi+ibteg+teg_eign+fjeld+k.ar, data = trainBCNOIBM2)
+
+# BIC test
+null <- lm(nuvirdi~1, data = trainBCAllIBM2)
+full <- lm.allBcIBM2
+lm.BIC <- step(null, scope = list(lower=null,upper=full),
+     direction="both", k=log(dim(trainBCAllIBM2)[1]))
+Radj.BICStep <- CalculateRadjLambda(lm.BIC, testBCAllIBM2, lambdaAll) # 0.8889675 rétt: 0.8352896
+
+# AIC test
+lm.AIC <- step(null, scope = list(lower=null,upper=full),
+     direction="both", k=2)
+Radj.AICStep <- CalculateRadjLambda(lm.AIC, testTransf, lambda.all) # 0.889269 # rétt: 0.8360234
+
+plot()
+```
 
