--- a/transformation.rmd
+++ b/transformation.rmd
@@ -4,14 +4,12 @@ We know that nuvirdi has an unusually heavy tale so we'll start by transforming 
 
 ```{r, fig.cap="Boxcox plot for the model and the model without outliers. No outlier plot is on the right", warning=FALSE}
 par(mfrow=c(1,2))
-lm.noOutlier <- lm(nuvirdi ~ ibm2, data=train)
 boxcox(lm.all)
-boxcox(lm.noOutlier)
+boxcox(lm.allNoOutlier)
 par(mfrow=c(1,1))
 ```
 
 ```{r}
-trainNO <- train
 bcAll <- boxcox(lm.all, plotit = FALSE)
 bcNO <- boxcox(lm.noOutlier, plotit = FALSE)
 # Get the highest value from the boxcox plots
@@ -20,6 +18,7 @@ lambdaNO <- with(bcNO, x[which.max(y)])
 # Transform the train and test datasets
 trainBCAll <- bcTransF(train, lambdaAll)
 testBCAll <- bcTransF(test, lambdaAll)
+
 trainBCNO <- bcTransF(trainNO, lambdaNO)
 testBCNO <- bcTransF(test, lambdaNO)
 
@@ -33,21 +32,22 @@ Radj.allNOBc <- CalculateRadjLambda(lm.noOutlierBc, testBCNO, lambdaNO)
 Here we get $R_{adj. full model}=`r Radj.allBc`$ and $R_{adj. NoOutliers}=`r Radj.allNOBc`$ by using the Boxcox method on the response variable. We can see from our ggpairs plot that the explanatory variable $ibm2$ has a heavy tale so lets try to transform that variable as well. Here we use a log transformation for the $ibm2$ variable.
 
 ```{r}
-
-# Transform ibm2
+# Transform ibm2 
 trainBCAllIBM2 <- trainBCAll
 trainBCAllIBM2$ibm2 <- log(trainBCAll$ibm2)
 testBCAllIBM2 <- testBCAll
 testBCAllIBM2$ibm2 <- log(testBCAll$ibm2)
+
+# Transform ibm2 for no outliers
 trainBCNOIBM2 <- trainBCNO
 trainBCNOIBM2$ibm2 <- log(trainBCNO$ibm2)
 testBCNOIBM2 <- testBCNO
 testBCNOIBM2$ibm2 <- log(testBCNO$ibm2)
 
 lm.allBcIBM2 <- lm(nuvirdi ~ ., data = trainBCAllIBM2)
-lm.allNOBcIBM2 <- lm(nuvirdi ~ ibm2*matssvaedi+undirmatssvaedi+ibteg+teg_eign+fjeld+k.ar, data = trainBCNOIBM2)
+lm.best <- lm(nuvirdi ~ ibm2*matssvaedi+undirmatssvaedi+ibteg+teg_eign+fjeld+k.ar, data = trainBCAllIBM2)
 Radj.allBcIBM2 <- CalculateRadjLambda(lm.allBcIBM2, testBCAllIBM2, lambdaAll) # 0.8880478 rétt: 0.8342736
-Radj.allNOBcIBM2 <- CalculateRadjLambda(lm.allNOBcIBM2, testBCNOIBM2, lambdaNO) 
+Radj.best <- CalculateRadjLambda(lm.best, testBCAllIBM2, lambdaAll) 
 
 ```
 
