--- a/diagnostics.rmd
+++ b/diagnostics.rmd
@@ -116,19 +116,28 @@ multiplot(fittedNoInf,QQnoInf,cols = 2)
 
 Now our R-adjusted is still worse than for the whole train data, $R-adjusted$= `r Radj.allNoInfluential` while R-squared keeps getting higher $R-squared$=`r sumNI$r.squared`
 
+Last data set we make is with no influential points and no outliers. The previous model should fit this data set very well but on the other half R-adjuested might be getting lower.
+
 ```{r echo=FALSE, message=FALSE, error=FALSE}
 #No influential and no residuals
-trainNO <- removeOutliersWStdResMoreThanThree(train)
-lm.allNoOutlier <- lm(nuvirdi ~ . ,data = trainNO)
-trainNoInfl <- removeInfluential(train,maxCookDistance = 4/n)
+trainNONI <- removeOutliersWStdResMoreThanThree(trainNoInflu)
+lm.allNoInflueNoOutlier <- lm(nuvirdi ~ . ,data = trainNONI)
+#sumNONI <- summary(lm.allNoInfluential)
+#sumNI$r.squared
+Radj.allNONI <- CalculateRadjusted(lm.allNoInflueNoOutlier, test)
+#trainNoInfl <- removeInfluential(train,maxCookDistance = 4/n)
 
 ##QQ plot of no influentiial points and 
 
-fittedNoInfNoOut <- fittedVsresiduals(lm.allNoInfluential)
-QQNoInfNoOut <- QQplotResiduals(lm.allNoInfluentialNoOutlier) + labs(title="QQ plot no inf no std res > 3")
+fittedNoInfNoOut <- fittedVsresiduals(lm.allNoInflueNoOutlier)
+QQNoInfNoOut <- QQplotResiduals(lm.allNoInflueNoOutlier) + labs(title="QQ plot no inf no std res > 3")
 multiplot(fittedNoInfNoOut,QQNoInfNoOut,cols = 2)
 
-Radj.allNoInfluentialNoOutlier <- CalculateRadjusted(lm.allNoInfluentialNoOutlier, test)
+Radj.allNoInfluentialNoOutlier <- CalculateRadjusted(lm.allNoInflueNoOutlier, test)
 Radj.allNoInfluentialNoOutlier
+```
+
+```{r}
+data.table(Radj.all,Radj.allNoOutliers,Radj.allNoInfluential,Radj.allNONI)
 ```
 
